2010-07-13  Evan Briones  <erbriones@gmail.com>

	* IDrawingEditor.cs: Added new DisplayMenu method.

	* SteticComponent.cs: Added DisplayMenu for compilation. 

	* StandDrawingView.cs: Added a generic target for drag and drop.

2010-06-13  Evan Briones  <erbriones@gmail.com>

	* ScaleRange.cs: Added new type.

	* StandardDrawing.cs: Added a range to the scale.
	
	* StandardDrawingView.cs: Implemented AddRange and RemoveRange methods.

	* IDrawingView.cs: Added new member FigureCollection.
	Added new methods AddRange and RemoveRange. 

2010-06-06  Evan Briones  <erbriones@gmail.com>

	* StandardDrawing.cs: Added simple AutoLayout method.
 
2010-05-27  Evan Briones  <erbriones@gmail.com>

	* ContainerCanvas.cs: Added checking for null _children in ForAll method.
	Also added IntPtr constructor so that StandardDrawingView could pass the IntPtr
	to the Gtk.Container.
	
	* StandardDrawingView.cs: Implemented a protected IntPtr constructor. This fixed
	a error which complained about not having an implemented IntPtr constructor.

2010-05-25  Evan Briones  <erbriones@gmail.com>
	
	* IDrawing.cs: Added FigureAdded and FigureRemoved events to the
	interface.
	
	* StandDrawing.cs: Implemented the FigureAdded and FigureRemoved
	event handlers.
	
	* MonoHotDraw.csproj: Modified the Gtk references to not be
	version specific.
	
2009-08-14  Manuel Cerón  <ceronman@gmail.com>

	* StandardDrawingView.cs: Added zooming support

	* MonoHotDraw.csproj: SelectAreaTool Renamed

	* IDrawingView.cs: Added Scale Property and VisibleAreaChanged
	event

2009-07-09  Manuel Cerón  <ceronman@gmail.com>

	* MonoHotDraw.csproj: Renamed VerStackFigure to VStackFigure

2009-07-09  Manuel Cerón  <ceronman@gmail.com>

	* MonoHotDraw.csproj: Renamed VStackFigure to HStackFigure

2009-07-09  Manuel Cerón  <ceronman@gmail.com>

	* MonoHotDraw.csproj: Renamed HStackFigure to VerStackFigure

2009-07-09  Manuel Cerón  <ceronman@gmail.com>

	* MonoHotDraw.csproj: Project Updated
